version/0.20/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.RealList.rst.txt
ansys.fluent.core.solver.flobject.RealList
==========================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: RealList

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~RealList.__init__
      ~RealList.after_execute
      ~RealList.as_quantity
      ~RealList.base_set_state
      ~RealList.before_execute
      ~RealList.default_value
      ~RealList.find_object
      ~RealList.get_attr
      ~RealList.get_attrs
      ~RealList.get_state
      ~RealList.is_active
      ~RealList.is_read_only
      ~RealList.max
      ~RealList.min
      ~RealList.print_state
      ~RealList.set_flproxy
      ~RealList.set_state
      ~RealList.state_with_units
      ~RealList.to_python_keys
      ~RealList.to_scheme_keys
      ~RealList.units
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~RealList.file_transfer_service
      ~RealList.flproxy
      ~RealList.fluent_name
      ~RealList.obj_name
      ~RealList.parent
      ~RealList.path
      ~RealList.python_name
      ~RealList.python_path
   
   